// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export CSV button default render 1`] = `
<a
  className="btn-table"
  data-for="table-tooltip"
  data-tip="Export To CSV"
  download={true}
  href=""
>
  <i
    className="fal fa-file-csv"
  />
</a>
`;

exports[`Export CSV disabled button 1`] = `
<a
  className="btn-table"
  data-for="table-tooltip"
  data-tip="Export To CSV"
  disabled={true}
  download={true}
  href=""
>
  <i
    className="fal fa-file-csv"
  />
</a>
`;

exports[`Export CSV with a url 1`] = `
<a
  className="btn-table"
  data-for="table-tooltip"
  data-tip="Export To CSV"
  download={true}
  href="foo"
>
  <i
    className="fal fa-file-csv"
  />
</a>
`;
